--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,10 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install python-telegram-bot[job-queue]==20.7
+      pip install apscheduler==3.10.4
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
