--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,7 @@ services:
     plan: free
     region: oregon
     buildCommand: |
-      pip install --upgrade pip
-      pip install python-telegram-bot[job-queue]==20.7
-      pip install apscheduler==3.10.4
+      pip install poetry && poetry install --no-dev
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
