--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,14 @@
 services:
   - type: web
-    name: clan-bot
+    name: clan-bot-nuevo
     env: python
     plan: free
     region: oregon
     buildCommand: |
-      pip install poetry && poetry install --no-dev
+      pip install --upgrade pip
+      pip cache purge
+      pip install --no-cache-dir -r requirements.txt -c constraints.txt
+      pip install --force-reinstall python-telegram-bot==20.7
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
