--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,12 @@
 services:
   - type: web
-    name: clan-bot-nuevo
+    name: clan-bot
     env: python
     plan: free
     region: oregon
     buildCommand: |
       pip install --upgrade pip
-      pip cache purge
-      pip install --no-cache-dir -r requirements.txt -c constraints.txt
-      pip install --force-reinstall python-telegram-bot==20.7
+      pip install --no-cache-dir python-telegram-bot==20.7
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
