--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,10 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip cache purge
+      pip install --no-cache-dir --force-reinstall -r requirements.txt
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
