--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==20.7
---index-url https://pypi.org/simple/
---trusted-host pypi.org
---trusted-host files.pythonhosted.org
+python-telegram-bot==20.7 --no-deps
+telegram==0.0.1
+apscheduler==3.10.4
