--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip cache purge
-      pip install --no-cache-dir --force-reinstall -r requirements.txt
+      pip install --force-reinstall python-telegram-bot==20.7
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
