--- a/render.yaml
+++ b/render.yaml
@@ -2,31 +2,13 @@ services:
   - type: web
     name: clan-bot
     env: python
-    plan: free
-    region: oregon
-    buildCommand: |
-      echo "=== LIMPIANDO ARCHIVOS CORRUPTOS ==="
-      find /opt/render/project/src -name "*.pyc" -delete
-      find /opt/render/project/src -name "__pycache__" -type d -exec rm -rf {} +
-      echo "=== REINSTALANDO COMPLETAMENTE ==="
-      pip uninstall -y python-telegram-bot
-      pip cache purge
-      rm -rf /opt/render/.cache/pip
-      echo "=== INSTALANDO NUEVO ==="
-      pip install --no-cache-dir --force-reinstall python-telegram-bot==20.7
-      echo "=== VERIFICANDO INSTALACIÓN ==="
-      python -c "
-      import telegram
-      import telegram.ext
-      print(f'Versión telegram: {telegram.__version__}')
-      print(f'Módulo updater: {hasattr(telegram.ext, \"Updater\")}')
-      print(f'Path: {telegram.ext.__file__}')
-      "
-    startCommand: python bot.py
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python bot.py"
     envVars:
       - key: BOT_TOKEN
         sync: false
       - key: ADMIN_ID
         sync: false
-    healthCheckPath: /health
-    autoDeploy: true
+      - key: WEBHOOK_URL
+        value: "https://clan-bot.onrender.com"  # URL pública que Render asigna
+
