--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: clan-bot
     env: python
+    plan: free
+    region: oregon
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python bot.py"
     envVars:
