--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     region: oregon
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python bot_clan.py"
+    startCommand: "python bot.py"
     envVars:
       - key: TOKEN
         sync: false
